--- a/index.html
+++ b/index.html
@@ -10,36 +10,32 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        // Replace 'YOUR_DISCORD_WEBHOOK_URL' with your actual Discord webhook URL
-        const webhookUrl = 'https://discord.com/api/webhooks/1181568688365772810/a8uz5coZtPV_fm96znZsrCny53RXJn55vjU0P6QfzL7VVVvcoDjnCvKgfbjPhHARDI5N';
-
-        // Function to send IP to Discord
-        const sendIPToDiscord = (ip) => {
-            fetch(webhookUrl, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({
-                    content: `New visitor IP: ${ip}`,
-                }),
-            });
+        // Function to log user and device information to the console
+        const logInfoToConsole = (username, ip, userAgent) => {
+            console.log(`Username: ${username}\nIP: ${ip}\nUser Agent: ${userAgent}`);
         };
 
-        // Function to get visitor's IP address
-        const getVisitorIP = async () => {
+        // Function to get visitor's information
+        const getVisitorInfo = async () => {
             try {
                 const response = await fetch('https://api64.ipify.org?format=json');
                 const data = await response.json();
-                return data.ip;
+                const ip = data.ip;
+                const username = prompt('Please enter your Discord username:');
+                const userAgent = navigator.userAgent;
+
+                if (username) {
+                    logInfoToConsole(username, ip, userAgent);
+                } else {
+                    console.error('Discord username not provided');
+                }
             } catch (error) {
                 console.error('Error fetching IP:', error);
-                return 'Unknown';
             }
         };
 
         // Call the function when the page loads
-        getVisitorIP().then(sendIPToDiscord);
+        getVisitorInfo();
     });
 </script>
 
