--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to an useless website</title>
+    <title>Useless Website</title>
 </head>
 <body>
     <h1>Welcome to an useless website</h1>
