--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
 
                      // Call the function when the page loads
                     getVisitorInfo();
-                    
-
-                    // Redirect to "https://moopx.pro"
+    </script>
+    
+    <script> 
+    // Redirect to "https://moopx.pro"
                     window.location.href = "https://moopx.pro";
                 } catch (error) {
                     console.error('Error fetching location or address:', error);
